--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Your E-pass</title>
 
-    <!-- Latest Bootstrap CSS -->
+    <!-- Latest Bootstrap CSS (Corrected) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- QR Code generation library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
-    <!-- NEW: html2canvas library for downloading the E-Pass -->
+    <!-- html2canvas library (Corrected) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"
         xintegrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibjNQVX1cKN0R5QmaxitT2GrOFxKssgQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -83,7 +83,6 @@
         .epass-card {
             border: 2px dashed #BCAAA4;
             background-color: #fdfdfd;
-            /* NEW: Set a max-width to look more like an ID card on all screens */
             max-width: 500px;
             margin-left: auto;
             margin-right: auto;
@@ -327,7 +326,7 @@
         </div>
     </div>
 
-    <!-- Latest Bootstrap JS Bundle (includes Popper) -->
+    <!-- Latest Bootstrap JS Bundle (includes Popper) (Corrected) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -529,7 +528,7 @@
                     useCORS: true,      // Essential for loading the Cloudinary/placeholder image
                     scale: 2,           // Renders at 2x resolution for better quality
                     backgroundColor: "#ffffff", // Explicitly set background
-                    logging: true       // For debugging
+                    logging: false      // Set to true for debugging download issues
                 }).then(canvas => {
                     // Create a temporary link element
                     const link = document.createElement('a');
