Update footer message in index.html and add event schema for PostgreSQL

--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
                                     </div>
                                 </div>
                                 <div class="card-footer bg-transparent border-top-0 text-center text-muted pt-0 pb-3">
-                                    <small style="font-size: 0.75rem;" class="d-none d-md-block">Made with <span
-                                            class="heart">&hearts;</span> by EllowDigital</small>
+                                    <small style="font-size: 0.75rem;">We look forward to seeing you!</small>
                                 </div>
                             </div>
 
