--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Your E-pass</title>
 
-    <!-- Latest Bootstrap CSS (Corrected) -->
+    <!-- Latest Bootstrap CSS (Corrected integrity attribute) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- QR Code generation library -->
+    <!-- We need a QR Code generation library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
-    <!-- html2canvas library (Corrected) -->
+    <!-- html2canvas for downloading the E-Pass (Corrected integrity attribute) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"
         xintegrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibjNQVX1cKN0R5QmaxitT2GrOFxKssgQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -35,9 +35,11 @@
             border-color: #8D6E63;
         }
 
-        .btn-primary:hover {
+        .btn-primary:hover,
+        .btn-primary:focus {
             background-color: #795548;
             border-color: #795548;
+            box-shadow: none;
         }
 
         .btn-check:checked+.btn-outline-primary,
@@ -48,6 +50,7 @@
             background-color: #8D6E63;
             border-color: #8D6E63;
             color: #ffffff;
+            box-shadow: none;
         }
 
         .btn-outline-primary {
@@ -55,14 +58,27 @@
             border-color: #8D6E63;
         }
 
-        .btn-outline-primary:hover {
+        .btn-outline-primary:hover,
+        .btn-outline-primary:focus {
             background-color: #8D6E63;
             border-color: #8D6E63;
             color: #ffffff;
+            box-shadow: none;
         }
 
         .text-primary {
             color: #8D6E63 !important;
+        }
+
+        .form-control:focus,
+        .form-select:focus {
+            border-color: #8D6E63;
+            box-shadow: 0 0 0 0.25rem rgba(141, 110, 99, 0.25);
+        }
+
+        .form-check-input:checked {
+            background-color: #8D6E63;
+            border-color: #8D6E63;
         }
 
         .btn-success {
@@ -255,7 +271,7 @@
                             <p class="lead">Thank you for registering — you are most welcome!</p>
                             <p class="text-muted">Please download your E-Pass below.</p>
 
-                            <!-- This is the element that will be downloaded -->
+                            <!-- The E-Pass Card -->
                             <div class="card epass-card my-4" id="epass-card">
                                 <div class="card-header bg-light text-dark-emphasis fw-medium">
                                     Official Event E-Pass
@@ -295,14 +311,26 @@
                         <div id="find-pass-section">
                             <hr class="my-4">
                             <h3 class="text-center fs-5 fw-medium">Lost your pass?</h3>
-                            <p class="text-center text-muted small">Enter your registered email to retrieve your E-Pass.
-                            </p>
+
                             <form id="find-pass-form">
-                                <div class="mb-3">
-                                    <label for="find-email" class="form-label visually-hidden">Email Address</label>
-                                    <input type="email" class="form-control" id="find-email" name="findEmail"
-                                        placeholder="Enter your email" required>
+                                <div class="text-center mb-3">
+                                    <div class="btn-group" role="group" aria-label="Find pass by">
+                                        <input type="radio" class="btn-check" name="search-type" id="search-type-phone"
+                                            value="phone" autocomplete="off" checked>
+                                        <label class="btn btn-outline-primary" for="search-type-phone">Phone</label>
+
+                                        <input type="radio" class="btn-check" name="search-type" id="search-type-email"
+                                            value="email" autocomplete="off">
+                                        <label class="btn btn-outline-primary" for="search-type-email">Email</label>
+                                    </div>
                                 </div>
+
+                                <div class="mb-3">
+                                    <label for="find-pass-input" class="form-label visually-hidden">Search Value</label>
+                                    <input type="text" class="form-control" id="find-pass-input"
+                                        placeholder="Enter your phone number" required>
+                                </div>
+
                                 <button type="submit" id="find-pass-btn"
                                     class="btn btn-outline-primary w-100 rounded-pill d-flex align-items-center justify-content-center">
                                     <span id="find-pass-btn-text">Find My Pass</span>
@@ -317,6 +345,7 @@
                     </div>
                 </div>
 
+                <!-- Page Footer Credit Line -->
                 <footer class="text-center text-muted mt-4 d-none d-md-block">
                     <small>Made with <span class="heart">&hearts;</span> by EllowDigital</small>
                 </footer>
@@ -325,7 +354,7 @@
         </div>
     </div>
 
-    <!-- Latest Bootstrap JS Bundle (includes Popper) (Corrected) -->
+    <!-- Latest Bootstrap JS Bundle (includes Popper) (Corrected integrity attribute) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -360,9 +389,16 @@
             const findPassButton = document.getElementById("find-pass-btn");
             const findPassButtonText = document.getElementById("find-pass-btn-text");
             const findPassSpinner = document.getElementById("find-pass-spinner");
+            const findPassInput = document.getElementById("find-pass-input");
+            const findPassToggles = document.querySelectorAll('input[name="search-type"]');
 
             // --- Helper Functions ---
 
+            /**
+             * Shows a message in the message-box alert.
+             * @param {string} message - The message to display.
+             * @param {string} type - The Bootstrap alert type (e.g., 'success', 'danger', 'info')
+             */
             function showMessage(message, type = 'info') {
                 messageBox.textContent = message;
                 messageBox.className = 'alert';
@@ -378,15 +414,25 @@
                 }
             }
 
+            /**
+             * Generates a QR code in the container.
+             * @param {string} regId - Registration ID
+             * @param {string} phone - Phone Number
+             */
             function generateQRCode(regId, phone) {
                 const qrData = JSON.stringify({ regId, phone });
                 qrCodeContainer.innerHTML = "";
                 const qr = qrcode(0, 'M');
                 qr.addData(qrData);
                 qr.make();
-                qrCodeContainer.innerHTML = qr.createImgTag(5, 10);
+                qrCodeContainer.innerHTML = qr.createImgTag(5, 10); // (scale, margin)
             }
 
+            /**
+             * Fills the E-Pass with attendee data and displays it.
+             * @param {object} attendee - The attendee data object from the backend
+             * @param {string | null} imageSrc - A local (compressed) image URL, or null to use the database URL
+             */
             function populateEpass(attendee, imageSrc) {
                 // Use provided imageSrc, fallback to database URL, then to default
                 epassAvatar.src = imageSrc || attendee.profile_pic_url || defaultAvatarSrc;
@@ -400,16 +446,17 @@
                 // Show the E-Pass section
                 registrationSection.classList.add("d-none");
                 findPassSection.classList.add("d-none");
-                messageBox.classList.add("d-none");
+                messageBox.classList.add("d-none"); // Hide any previous messages
                 epassSection.classList.remove("d-none");
             }
 
             // --- Event Listeners ---
 
+            // Handle image compression and preview
             profilePicInput.addEventListener("change", (e) => {
                 const file = e.target.files[0];
                 if (!file) return;
-                const MAX_FILE_SIZE = 10 * 1024 * 1024;
+                const MAX_FILE_SIZE = 10 * 1024 * 1024; // 10MB
                 if (file.size > MAX_FILE_SIZE) {
                     showMessage("File is too large. Please select an image under 10MB.", "danger");
                     profilePicInput.value = "";
@@ -445,27 +492,37 @@
                 reader.readAsDataURL(file);
             });
 
+            // Handle Registration
             registrationForm.addEventListener("submit", async (e) => {
                 e.preventDefault();
                 const formData = new FormData(registrationForm);
                 const name = formData.get("name"), phone = formData.get("phone"), email = formData.get("email"), city = formData.get("city"), state = formData.get("state");
+
+                // Get the compressed image data. If it's the placeholder, send null.
                 let imageBase64 = avatarPreview.src;
-                if (imageBase64 === defaultAvatarSrc) imageBase64 = null;
+                if (imageBase64 === defaultAvatarSrc) {
+                    imageBase64 = null;
+                }
 
                 const postData = { name, phone, email, city, state, imageBase64 };
 
+                // Set loading state
                 submitButton.disabled = true;
                 spinner.classList.remove("d-none");
                 submitButtonText.innerText = "Registering...";
 
                 try {
+                    // Call the Netlify function
                     const response = await fetch("/api/register", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify(postData),
                     });
                     const result = await response.json();
-                    if (!response.ok) throw new Error(result.message || `HTTP error! Status: ${response.status}`);
+                    if (!response.ok) {
+                        // Handle errors from the backend (like "Phone already registered")
+                        throw new Error(result.message || `HTTP error! Status: ${response.status}`);
+                    }
 
                     // Success!
                     populateEpass(result.data, imageBase64); // Pass local imageSrc for immediate display
@@ -481,38 +538,71 @@
                 }
             });
 
+            // Update "Find My Pass" placeholder text when toggling
+            findPassToggles.forEach(toggle => {
+                toggle.addEventListener('change', (e) => {
+                    if (e.target.value === 'phone') {
+                        findPassInput.placeholder = "Enter your phone number";
+                        findPassInput.type = "tel";
+                    } else {
+                        findPassInput.placeholder = "Enter your email address";
+                        findPassInput.type = "email";
+                    }
+                });
+            });
+
+            // Handle "Find My Pass"
             findPassForm.addEventListener("submit", async (e) => {
                 e.preventDefault();
-                const email = document.getElementById("find-email").value;
 
+                const searchType = document.querySelector('input[name="search-type"]:checked').value;
+                const searchValue = findPassInput.value;
+
+                let postData = {};
+                if (searchType === 'phone') {
+                    postData.phone = searchValue;
+                } else {
+                    postData.email = searchValue;
+                }
+
+                // Set loading state
                 findPassButton.disabled = true;
                 findPassSpinner.classList.remove("d-none");
                 findPassButtonText.innerText = "Searching...";
 
                 try {
+                    // Call the Netlify function
                     const response = await fetch("/api/find-pass", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ email: email }),
+                        body: JSON.stringify(postData),
                     });
                     const result = await response.json();
-                    if (!response.ok) throw new Error(result.message || `HTTP error! Status: ${response.status}`);
+                    if (!response.ok) {
+                        // Handle errors (like "No registration found")
+                        throw new Error(result.message || `HTTP error! Status: ${response.status}`);
+                    }
 
                     // Success!
-                    populateEpass(result.data, null); // Pass null, so it uses the database URL
+                    populateEpass(result.data, null); // Pass null, so it uses the database URL for the image
 
                 } catch (error) {
                     console.error("Find Pass failed:", error);
                     showMessage(error.message, "danger");
                 } finally {
+                    // Always reset button
                     findPassButton.disabled = false;
                     findPassSpinner.classList.add("d-none");
                     findPassButtonText.innerText = "Find My Pass";
                     findPassForm.reset();
+                    // Reset placeholder to default
+                    findPassInput.placeholder = "Enter your phone number";
+                    findPassInput.type = "tel";
+                    document.getElementById('search-type-phone').checked = true;
                 }
             });
 
-            // --- UPDATED: Handle "Download E-Pass" ---
+            // Handle "Download E-Pass"
             downloadButton.addEventListener("click", () => {
                 const passElement = document.getElementById("epass-card");
                 const regId = document.getElementById("epass-reg-id").textContent;
