--- a/index.html
+++ b/index.html
@@ -344,6 +344,11 @@
 
                     </div>
                 </div>
+                <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
+                    <input type="text" name="name" value="Test" required>
+                    <input type="email" name="email" value="test@test.com" required>
+                    <button type="submit">Send Test</button>
+                </form>
 
                 <!-- Page Footer Credit Line -->
                 <footer class="text-center text-muted mt-4 d-none d-md-block">
