--- a/admin.html
+++ b/admin.html
@@ -38,14 +38,32 @@
             <h1 class="h4 mb-0 fw-bold text-white">
                 <i class="bi bi-shield-lock-fill me-2"></i>Admin Dashboard
             </h1>
-            <a href="/verify.html" class="btn btn-outline-light btn-sm">
-                <i class="bi bi-qr-code-scan me-2"></i>Go to Check-In
-            </a>
+            <div class="d-flex gap-2">
+                <a href="/verify.html" class="btn btn-outline-light btn-sm">
+                    <i class="bi bi-qr-code-scan me-2"></i>Go to Check-In
+                </a>
+                <button id="admin-logout-btn" class="btn btn-outline-light btn-sm">
+                    <i class="bi bi-box-arrow-right me-2"></i>Logout
+                </button>
+            </div>
         </div>
     </header>
 
     <main class="content-wrapper">
         <div class="container-fluid">
+            <!-- Admin Status Banner (shown on DB timeout/unavailable) -->
+            <div id="admin-status-banner" class="d-none my-3">
+                <div class="alert alert-warning d-flex justify-content-between align-items-center" role="alert">
+                    <div>
+                        <strong id="admin-status-message">System is experiencing connectivity issues.</strong>
+                        <div id="admin-status-subtext" class="small text-muted">Attempting to reconnect...</div>
+                    </div>
+                    <div class="d-flex gap-2 align-items-center">
+                        <button id="admin-status-refresh" class="btn btn-sm btn-outline-primary">Refresh Now</button>
+                        <button id="admin-status-dismiss" class="btn btn-sm btn-outline-secondary">Dismiss</button>
+                    </div>
+                </div>
+            </div>
             <!-- Real-Time Monitoring -->
             <div class="row g-4 mb-4">
                 <div class="col-md-6 col-lg-3">
