--- a/admin.html
+++ b/admin.html
@@ -185,15 +185,18 @@
                 </div>
                 <div class="card-body">
                     <div class="row g-3 mb-3">
-                        <div class="col-md-8">
+                        <div class="col-md-7">
                             <input type="text" id="search-attendee-input" class="form-control" placeholder="Search by Name, Email, or Reg. ID...">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-2">
                             <select id="filter-attendee-select" class="form-select">
                                 <option value="all" selected>All Attendees</option>
                                 <option value="checked_in">Checked-In</option>
                                 <option value="not_checked_in">Not Checked-In</option>
                             </select>
+                        </div>
+                        <div class="col-md-3 d-grid">
+                            <button id="search-attendee-btn" class="btn btn-primary">Search</button>
                         </div>
                     </div>
                     <div class="table-responsive">
@@ -221,6 +224,84 @@
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <!-- Edit Attendee Modal -->
+    <div class="modal fade" id="edit-attendee-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Attendee</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="edit-attendee-form">
+                    <div class="modal-body">
+                        <input type="hidden" id="edit-registration-id">
+                        <div class="mb-3">
+                            <label class="form-label">Full Name</label>
+                            <input id="edit-full-name" type="text" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            <input id="edit-email" type="email" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Phone</label>
+                            <input id="edit-phone" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" id="edit-save-btn" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Confirm Delete Modal (requires staff password) -->
+    <div class="modal fade" id="confirm-delete-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-sm modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-danger">Confirm Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="confirm-delete-form">
+                    <div class="modal-body">
+                        <p class="small text-muted">This action will permanently delete the attendee record. Please enter your admin password to confirm.</p>
+                        <input type="hidden" id="delete-registration-id">
+                        <div class="mb-3">
+                            <label class="form-label">Admin Password</label>
+                            <input id="delete-password-input" type="password" class="form-control" required>
+                        </div>
+                        <div id="delete-error" class="text-danger small"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" id="delete-confirm-btn" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Not Found Modal -->
+    <div class="modal fade" id="not-found-modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">No Results</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p id="not-found-message" class="mb-0">No attendees match your search. Try different keywords.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="assets/js/admin.js"></script>
 </body>
 
