feat: Add refresh stats button and functionality to admin dashboard

--- a/admin.html
+++ b/admin.html
@@ -38,10 +38,13 @@
             <h1 class="h4 mb-0 fw-bold text-white">
                 <i class="bi bi-shield-lock-fill me-2"></i>Admin Dashboard
             </h1>
-            <div class="d-flex gap-2">
+            <div class="d-flex gap-2 align-items-center">
                 <a href="/verify.html" class="btn btn-outline-light btn-sm">
                     <i class="bi bi-qr-code-scan me-2"></i>Go to Check-In
                 </a>
+                <button id="refresh-stats-btn" class="btn btn-outline-light btn-sm">
+                    <i class="bi bi-arrow-clockwise me-1"></i>Refresh Stats
+                </button>
                 <button id="admin-logout-btn" class="btn btn-outline-light btn-sm">
                     <i class="bi bi-box-arrow-right me-2"></i>Logout
                 </button>
