--- a/admin.html
+++ b/admin.html
@@ -203,6 +203,19 @@
                         </div>
                     </div>
                     <div class="table-responsive">
+                        <div id="attendee-table-controls" class="d-flex justify-content-between align-items-center mb-2">
+                            <div>
+                                <select id="attendee-page-size" class="form-select form-select-sm" style="width:120px; display:inline-block;">
+                                    <option value="10">10 / page</option>
+                                    <option value="15" selected>15 / page</option>
+                                    <option value="25">25 / page</option>
+                                    <option value="50">50 / page</option>
+                                </select>
+                                <input id="attendee-jump-input" type="number" min="1" class="form-control form-control-sm ms-2" style="width:90px; display:inline-block;" placeholder="Page #">
+                                <button id="attendee-jump-btn" class="btn btn-sm btn-outline-secondary ms-2">Go</button>
+                            </div>
+                            <div id="attendee-table-spinner" class="small text-muted d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading</div>
+                        </div>
                         <table class="table table-hover align-middle">
                             <thead class="table-light">
                                 <tr>
@@ -218,6 +231,15 @@
                             </tbody>
                         </table>
                     </div>
+                    <!-- Pagination for attendee list -->
+                    <div id="attendee-pagination" class="d-flex justify-content-between align-items-center mt-3">
+                        <div>
+                            <button id="attendee-prev-btn" class="btn btn-sm btn-outline-secondary">&larr; Prev</button>
+                            <button id="attendee-next-btn" class="btn btn-sm btn-outline-secondary ms-2">Next &rarr;</button>
+                        </div>
+                        <div class="small text-muted" id="attendee-page-info">Page 1</div>
+                    </div>
+
                     <div id="attendee-table-placeholder" class="text-center p-5">
                         <p>Search for an attendee to see results.</p>
                     </div>
@@ -225,6 +247,17 @@
             </div>
         </div>
     </main>
+
+    <!-- Global loader overlay for admin actions -->
+    <div id="global-loader" class="d-none">
+        <div class="global-loader-backdrop"></div>
+        <div class="global-loader-center">
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="mt-2 small text-muted">Processing...</div>
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
     <!-- Edit Attendee Modal -->
