--- a/verify.html
+++ b/verify.html
@@ -61,6 +61,11 @@
             <h1 class="h4 mb-0 fw-bold text-primary">
                 <i class="bi bi-person-check-fill me-2"></i>E-Pass Check-In
             </h1>
+            <div class="float-end">
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm">
+                    <i class="bi bi-shield-lock-fill me-1"></i>Admin Dashboard
+                </a>
+            </div>
         </div>
     </header>
 
