--- a/index.html
+++ b/index.html
@@ -60,12 +60,29 @@
                         <!-- Centered Status Container (used for maintenance/closed messaging) -->
                         <div id="status-center" class="d-none w-100" aria-live="polite">
                             <div class="d-flex flex-column align-items-center justify-content-center text-center py-5">
-                                <div class="card border-0 shadow-sm rounded-4 p-4" style="max-width:680px; width:100%">
-                                    <div class="card-body">
-                                        <h3 id="status-center-title" class="h4 fw-bold mb-3"></h3>
-                                        <p id="status-center-text" class="mb-0 text-muted"></p>
-                                        <div class="mt-4">
-                                            <button id="status-reload-btn" class="btn btn-outline-primary rounded-pill">Reload</button>
+                                <div class="status-hero card border-0 shadow-lg rounded-4 p-4" style="max-width:720px; width:100%" role="region" aria-labelledby="status-center-title" aria-live="polite">
+                                    <div class="d-flex align-items-start gap-3 status-hero-inner">
+                                        <div class="mh-icon-wrapper">
+                                            <div class="mh-icon status-icon" aria-hidden="true">&#9888;</div>
+                                        </div>
+                                        <div class="mh-body text-start">
+                                            <h2 id="status-center-title" class="h3 fw-extrabold mb-2">Status</h2>
+                                            <p id="status-center-text" class="mb-3 text-muted fs-6"></p>
+                                            <div class="d-flex flex-wrap gap-2 align-items-center">
+                                                <button id="status-reload-btn" class="btn btn-primary btn-lg rounded-pill" aria-label="Reload status">Reload</button>
+                                                <button id="admin-open-btn" class="btn btn-outline-secondary btn-lg rounded-pill" aria-label="Open admin login">Admin</button>
+                                                <span id="status-countdown" class="text-muted small ms-2" aria-live="polite"></span>
+                                            </div>
+                                        </div>
+
+                                        <!-- Decorative SVG / Illustration (aria-hidden) -->
+                                        <div class="status-illustration d-none d-md-flex" aria-hidden="true">
+                                            <!-- Simple abstract shapes to the right for visual polish -->
+                                            <svg width="140" height="110" viewBox="0 0 140 110" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
+                                                <rect x="0" y="10" width="80" height="90" rx="40" fill="#e8f1ff" />
+                                                <rect x="60" y="0" width="80" height="90" rx="40" fill="#dbeefd" />
+                                                <circle cx="40" cy="40" r="10" fill="#ff7a00" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </div>
@@ -250,7 +267,7 @@
                     </div>
                 </div>
 
-                <footer class="text-center text-muted mt-4">
+                <footer id="site-footer" class="text-center text-muted mt-4">
                     <small>Made with <span class="heart">&hearts;</span> by
                         EllowDigital</small>
                 </footer>
@@ -262,6 +279,32 @@
         integrity="sha512-HvOjJrdwNpDbkGJIG2ZNqDlVqMo77qbs4Me4cah0HoDrfhrbA+8SBlZn1KrvAQw7cILLPFJvdwIgphzQmMm+Pw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/js/main.js"></script>
+
+    <!-- Admin password modal (unobtrusive) -->
+    <div class="modal fade" id="adminModal" tabindex="-1" aria-labelledby="adminModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="adminModalLabel">Staff Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="admin-login-form">
+                    <div class="modal-body">
+                        <p class="small text-muted">Enter your staff password to unlock admin features. The password is stored only in this browser session.</p>
+                        <div class="mb-3">
+                            <label for="admin-password" class="form-label visually-hidden">Staff Password</label>
+                            <input type="password" id="admin-password" class="form-control" placeholder="Staff password" required aria-required="true" />
+                            <div id="admin-error" class="invalid-feedback d-none" role="alert"></div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Unlock</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script>
         if ("serviceWorker" in navigator) {
