--- a/verify.html
+++ b/verify.html
@@ -57,13 +57,20 @@
     <div id="message-box-container" aria-live="polite"></div>
 
     <header class="app-header p-3">
-        <div class="container-fluid">
-            <h1 class="h4 mb-0 fw-bold text-primary">
-                <i class="bi bi-person-check-fill me-2"></i>E-Pass Check-In
-            </h1>
-            <div class="float-end">
-                <a href="/admin.html" class="btn btn-outline-primary btn-sm">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center gap-3">
+                <button id="menu-toggle" class="btn btn-sm btn-light d-md-none" aria-label="Toggle menu" title="Menu"><i class="bi bi-list"></i></button>
+                <h1 class="h5 mb-0 fw-bold text-primary d-flex align-items-center gap-2">
+                    <i class="bi bi-person-check-fill"></i>
+                    <span class="d-none d-sm-inline">E-Pass Check-In</span>
+                </h1>
+            </div>
+            <div class="d-flex align-items-center gap-2">
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-none d-sm-inline-flex">
                     <i class="bi bi-shield-lock-fill me-1"></i>Admin Dashboard
+                </a>
+                <a href="/admin.html" class="btn btn-outline-primary btn-sm d-inline-flex d-sm-none" aria-label="Admin Dashboard">
+                    <i class="bi bi-shield-lock-fill"></i>
                 </a>
             </div>
         </div>
