--- a/admin.html
+++ b/admin.html
@@ -35,9 +35,12 @@
 
     <header class="app-header">
         <div class="container-fluid d-flex justify-content-between align-items-center">
-            <h1 class="h4 mb-0 fw-bold text-white">
-                <i class="bi bi-shield-lock-fill me-2"></i>Admin Dashboard
-            </h1>
+            <div class="d-flex align-items-center gap-3">
+                <button id="menu-toggle" class="btn btn-light d-md-none" aria-label="Open menu" aria-expanded="false" title="Menu"><i class="bi bi-list"></i></button>
+                <h1 class="h4 mb-0 fw-bold text-white">
+                    <i class="bi bi-shield-lock-fill me-2"></i>Admin Dashboard
+                </h1>
+            </div>
             <div class="d-flex gap-2 align-items-center">
                 <a href="/verify.html" class="btn btn-outline-light btn-sm">
                     <i class="bi bi-qr-code-scan me-2"></i>Go to Check-In
@@ -260,6 +263,23 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"></script>
+    <!-- Mobile slide-out nav -->
+    <div id="mobile-nav-backdrop" class="mobile-nav-backdrop d-none" tabindex="-1"></div>
+    <nav id="mobile-nav" class="mobile-nav" aria-hidden="true" aria-label="Mobile navigation">
+        <div class="mobile-nav-inner">
+            <div class="mobile-nav-header d-flex justify-content-between align-items-center">
+                <div class="fw-bold">Admin</div>
+                <button id="mobile-nav-close" class="btn btn-sm btn-light" aria-label="Close menu"><i class="bi bi-x"></i></button>
+            </div>
+            <ul class="list-unstyled mt-3">
+                <li><a href="#" data-nav-target="stats" class="mobile-nav-link">📊 Dashboard</a></li>
+                <li><a href="#attendees" data-nav-target="attendees" class="mobile-nav-link">👥 Attendees</a></li>
+                <li><a href="#health" data-nav-target="health" class="mobile-nav-link">❤️ System Health</a></li>
+                <li><a href="/verify.html" class="mobile-nav-link">🔍 Check-In</a></li>
+                <li><button id="mobile-logout" class="btn btn-danger w-100 mt-3">Logout</button></li>
+            </ul>
+        </div>
+    </nav>
     <!-- Edit Attendee Modal -->
     <div class="modal fade" id="edit-attendee-modal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
